主页增加实时天气信息

--- a/My Computer Tools Ⅱ/App.config
+++ b/My Computer Tools Ⅱ/App.config
@@ -13,20 +13,14 @@
     </startup>
     <userSettings>
         <My_Computer_Tools__x2161_.Properties.Settings>
-            <setting name="LoadName" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="LoadPwd" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="ShowLoad" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="LoadCode" serializeAs="String">
-                <value />
-            </setting>
             <setting name="OpenStartRun" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="ShowAccinCMBS" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="City" serializeAs="String">
+                <value />
             </setting>
         </My_Computer_Tools__x2161_.Properties.Settings>
     </userSettings>
