多线程池任务控制

--- a/My Computer Tools Ⅱ/App.config
+++ b/My Computer Tools Ⅱ/App.config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="My_Computer_Tools__x2161_.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="My_Computer_Tools__x2161_.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <startup> 
+    <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <userSettings>
@@ -22,6 +22,30 @@
             <setting name="City" serializeAs="String">
                 <value />
             </setting>
+            <setting name="qiniuAK" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="qiniuSK" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="qiniuBucket" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="qiniuZoneID" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="qiniuDomain" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="qnwatcherstr" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="qnStartFolderW" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="qnUpFileCheck" serializeAs="String">
+                <value>True</value>
+            </setting>
         </My_Computer_Tools__x2161_.Properties.Settings>
     </userSettings>
     <applicationSettings>
@@ -31,4 +55,12 @@
             </setting>
         </My_Computer_Tools__x2161_.Properties.Settings>
     </applicationSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
