--- a/My Computer Tools Ⅱ/App.config
+++ b/My Computer Tools Ⅱ/App.config
@@ -46,6 +46,21 @@
             <setting name="qnUpFileCheck" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="CheckFileNumber" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="qnShowMesg" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="qnUpEnd" serializeAs="String">
+                <value>MarkDown格式</value>
+            </setting>
+            <setting name="qnImgPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="WeatherNumber" serializeAs="String">
+                <value>10</value>
+            </setting>
         </My_Computer_Tools__x2161_.Properties.Settings>
     </userSettings>
     <applicationSettings>
