--- a/My Computer Tools Ⅱ/Properties/Settings.settings
+++ b/My Computer Tools Ⅱ/Properties/Settings.settings
@@ -38,5 +38,20 @@
     <Setting Name="qnUpFileCheck" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="CheckFileNumber" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="qnShowMesg" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="qnUpEnd" Type="System.String" Scope="User">
+      <Value Profile="(Default)">MarkDown格式</Value>
+    </Setting>
+    <Setting Name="qnImgPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="WeatherNumber" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
