--- a/My Computer Tools Ⅱ/App.config
+++ b/My Computer Tools Ⅱ/App.config
@@ -47,13 +47,13 @@
                 <value>True</value>
             </setting>
             <setting name="CheckFileNumber" serializeAs="String">
-                <value>10</value>
+                <value>2</value>
             </setting>
             <setting name="qnShowMesg" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="qnUpEnd" serializeAs="String">
-                <value>MarkDown格式</value>
+                <value />
             </setting>
             <setting name="qnImgPath" serializeAs="String">
                 <value />
@@ -61,12 +61,24 @@
             <setting name="WeatherNumber" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="FailureTryNumber" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="email" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="RunCmdText" serializeAs="String">
+                <value />
+            </setting>
         </My_Computer_Tools__x2161_.Properties.Settings>
     </userSettings>
     <applicationSettings>
         <My_Computer_Tools__x2161_.Properties.Settings>
             <setting name="ProgramVer" serializeAs="String">
-                <value>T1</value>
+                <value>T2</value>
+            </setting>
+            <setting name="UpDataAPI" serializeAs="String">
+                <value>https://api.github.com/repos/XiaM-Admin/XComputerTools/releases/latest</value>
             </setting>
         </My_Computer_Tools__x2161_.Properties.Settings>
     </applicationSettings>
