--- a/My Computer Tools Ⅱ/App.config
+++ b/My Computer Tools Ⅱ/App.config
@@ -56,7 +56,7 @@
                 <value />
             </setting>
             <setting name="qnImgPath" serializeAs="String">
-                <value />
+                <value>MarkDownImg</value>
             </setting>
             <setting name="WeatherNumber" serializeAs="String">
                 <value>10</value>
@@ -70,12 +70,30 @@
             <setting name="RunCmdText" serializeAs="String">
                 <value />
             </setting>
+            <setting name="BootRunApp" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="BootRun" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BootRunCmd" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="BootNumber" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="AccEncryptPwd" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="_HotKey" serializeAs="String">
+                <value>True</value>
+            </setting>
         </My_Computer_Tools__x2161_.Properties.Settings>
     </userSettings>
     <applicationSettings>
         <My_Computer_Tools__x2161_.Properties.Settings>
             <setting name="ProgramVer" serializeAs="String">
-                <value>T2</value>
+                <value>T3</value>
             </setting>
             <setting name="UpDataAPI" serializeAs="String">
                 <value>https://api.github.com/repos/XiaM-Admin/XComputerTools/releases/latest</value>
