--- a/My Computer Tools Ⅱ/Properties/Settings.settings
+++ b/My Computer Tools Ⅱ/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ProgramVer" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">T2</Value>
+      <Value Profile="(Default)">T3</Value>
     </Setting>
     <Setting Name="OpenStartRun" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
@@ -48,7 +48,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="qnImgPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">MarkDownImg</Value>
     </Setting>
     <Setting Name="WeatherNumber" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">10</Value>
@@ -64,6 +64,24 @@
     </Setting>
     <Setting Name="RunCmdText" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="BootRunApp" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="BootRun" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="BootRunCmd" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="BootNumber" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="AccEncryptPwd" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="_HotKey" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
