--- a/My Computer Tools Ⅱ/App.config
+++ b/My Computer Tools Ⅱ/App.config
@@ -1,15 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="My_Computer_Tools__x2161_.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="My_Computer_Tools__x2161_.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="My_Computer_Tools__x2161_.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="My_Computer_Tools__x2161_.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <My_Computer_Tools__x2161_.Properties.Settings>
@@ -20,25 +20,25 @@
                 <value>False</value>
             </setting>
             <setting name="City" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="qiniuAK" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="qiniuSK" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="qiniuBucket" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="qiniuZoneID" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="qiniuDomain" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="qnwatcherstr" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="qnStartFolderW" serializeAs="String">
                 <value>False</value>
@@ -53,7 +53,7 @@
                 <value>False</value>
             </setting>
             <setting name="qnUpEnd" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="qnImgPath" serializeAs="String">
                 <value>MarkDownImg</value>
@@ -65,25 +65,25 @@
                 <value>2</value>
             </setting>
             <setting name="email" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="RunCmdText" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="BootRunApp" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="BootRun" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="BootRunCmd" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="BootNumber" serializeAs="String">
                 <value>1</value>
             </setting>
             <setting name="AccEncryptPwd" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="_HotKey" serializeAs="String">
                 <value>True</value>
@@ -103,8 +103,8 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
